<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:id="@+id/mainLayout"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="android.com.inclass03.DisplayActivity">
    <!--android:background="@drawable/ic_action_edit"-->



    <TextView
        android:layout_width="match_parent"
        android:text="@string/displayAct_title"
        android:gravity="center"
        android:textSize="@dimen/fontSize"
        android:textStyle="bold"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/lbl_name"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/fontSize"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="235dp"
            android:layout_marginLeft="3dp"
            android:layout_gravity="center_vertical"
            android:id="@+id/stdnt_name"
            android:textSize="@dimen/fontSize"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="30dp"
            android:src="@drawable/ic_action_edit"
            android:layout_gravity="right"
            android:onClick="updateName"
            android:layout_weight="0.1"
            android:layout_height="30dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/lbl_email"
            android:textSize="@dimen/fontSize"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="235dp"
            android:layout_marginLeft="3dp"
            android:layout_gravity="center_vertical"
            android:id="@+id/stdnt_email"
            android:textSize="@dimen/fontSize"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="30dp"
            android:src="@drawable/ic_action_edit"
            android:onClick="updateEmail"
            android:layout_gravity="right"
            android:layout_weight="0.1"
            android:layout_height="30dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/lbl_dept"
            android:textSize="@dimen/fontSize"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="180dp"
            android:layout_marginLeft="3dp"
            android:layout_gravity="center_vertical"
            android:id="@+id/stdnt_dept"
            android:textSize="@dimen/fontSize"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="30dp"
            android:src="@drawable/ic_action_edit"
            android:onClick="updateDepartment"
            android:layout_gravity="right"
            android:layout_weight="0.1"
            android:layout_height="30dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/lbl_mood"
            android:textSize="@dimen/fontSize"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="235dp"
            android:layout_marginLeft="3dp"
            android:layout_gravity="center_vertical"
            android:id="@+id/stdnt_mood"
            android:textSize="@dimen/fontSize"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="30dp"
            android:src="@drawable/ic_action_edit"
            android:onClick="updateMood"
            android:layout_gravity="right"
            android:layout_weight="0.1"
            android:layout_height="30dp" />
    </LinearLayout>
</LinearLayout>
